--- a/Server/vercel.json
+++ b/Server/vercel.json
@@ -1,11 +1,11 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "app.js", "use": "@vercel/node" },
-      { "src": "public/**/*", "use": "@vercel/static" }
-    ],
-    "routes": [
-      { "src": "/api/(.*)", "dest": "/app.js" },
-      { "src": "/(.*)", "dest": "/index.html" }
-    ]
-  }
+  "version": 2,
+  "builds": [
+    { "src": "Server/app.js", "use": "@vercel/node" },
+    { "src": "EMS/**/*", "use": "@vercel/static" }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/Server/app.js" },
+    { "src": "/(.*)", "dest": "/EMS/index.html" }
+  ]
+}
